[project]
name = "iptracking"
version = "1.0.2"
description = "IP tracking code"
authors = [{name = "Aarni"}]
readme = "README.md"
requires-python = ">=3.7"

[project.urls] 
"Source" = "https://github.com/aarnisi/ip_locator/"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependencies]
geopy = "~=2.4.0"
ipinfo = "~=4.4.3"
